# kube-cloudflare-dns

./: .gitignore  Cargo.toml  Dockerfile
.github/workflows/: build.yml
src/: api.rs  lib.rs  main.rs  plan.rs  resource.rs
