[package]
name = "kube-cloudflare-dns"
version = "0.1.0"
edition = "2018"

[dependencies]
tokio = { version = "1.12.0", features = ["rt", "macros"] }
kube = { version = "0.61.0", default-features = false, features = ["client", "native-tls"] }
kube-runtime = "0.61.0"
k8s-openapi = { version = "0.13.1", default-features = false, features = ["v1_22"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
anyhow = "1.0.44"
thiserror = "1.0.30"
futures = "0.3.17"
reqwest = { version = "0.11.5", features = ["json"] }
